--- a/package.json
+++ b/package.json
@@ -1,15 +1,54 @@
 {
-  "name": "foodshop-bff",
-  "version": "1.0.0",
-  "description": "A bff for the micro services of a food delivery system",
-  "main": "index.js",
+  "name": "bff-foodshop",
+  "version": "0.0.0",
+  "description": "BFF for food shop micro services",
+  "main": "dist",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon -w src --exec \"node_modules/.bin/babel-node src --presets es2015,stage-0\"",
+    "build": "babel src -s -D -d dist --presets es2015,stage-0",
+    "start": "node dist",
+    "prestart": "npm run -s build",
+    "test": "eslint src"
   },
-  "author": "kraj2608@sysco.com",
+  "eslintConfig": {
+    "extends": "eslint:recommended",
+    "parserOptions": {
+      "ecmaVersion": 7,
+      "sourceType": "module"
+    },
+    "env": {
+      "node": true
+    },
+    "rules": {
+      "no-console": 0,
+      "no-unused-vars": 1
+    }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/kraj2608/bff-project-summit.git"
+  },
+  "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.20.1",
-    "express": "^4.18.2"
-  }
+    "body-parser": "^1.13.3",
+    "compression": "^1.5.2",
+    "cors": "^2.7.1",
+    "express": "^4.13.3",
+    "morgan": "^1.8.0",
+    "resource-router-middleware": "^0.6.0"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.9.0",
+    "babel-core": "^6.9.0",
+    "babel-node": "^0.0.1-security",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-stage-0": "^6.5.0",
+    "eslint": "^3.1.1",
+    "nodemon": "^1.9.2"
+  },
+  "bugs": {
+    "url": "https://github.com/kraj2608/bff-project-summit/issues"
+  },
+  "homepage": "https://github.com/kraj2608/bff-project-summit#readme"
 }
