--- a/package.json
+++ b/package.json
@@ -31,10 +31,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.3.2",
     "body-parser": "^1.13.3",
     "compression": "^1.5.2",
     "cors": "^2.7.1",
+    "dotenv": "^16.0.3",
     "express": "^4.13.3",
+    "http-status-codes": "^2.2.0",
     "morgan": "^1.8.0",
     "resource-router-middleware": "^0.6.0"
   },
