--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "BFF for food shop micro services",
   "main": "dist",
   "scripts": {
-    "dev": "nodemon -w src --exec \"node_modules/.bin/babel-node src --presets es2015,stage-0\"",
-    "build": "babel src -s -D -d dist --presets es2015,stage-0",
+    "dev": "nodemon --exec babel-node src/index.js",
+    "build": "rimraf dist && babel src --out-dir dist  --copy-files",
     "start": "node dist",
     "prestart": "npm run -s build",
     "test": "eslint src"
@@ -39,16 +39,18 @@
     "express": "^4.13.3",
     "http-status-codes": "^2.2.0",
     "morgan": "^1.8.0",
-    "resource-router-middleware": "^0.6.0"
+    "resource-router-middleware": "^0.6.0",
+    "swagger-ui-express": "^4.6.1"
   },
   "devDependencies": {
-    "babel-cli": "^6.9.0",
-    "babel-core": "^6.9.0",
-    "babel-node": "^0.0.1-security",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-stage-0": "^6.5.0",
-    "eslint": "^3.1.1",
-    "nodemon": "^1.9.2"
+    "@babel/cli": "^7.20.7",
+    "@babel/core": "^7.20.12",
+    "@babel/node": "^7.20.7",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
+    "@babel/preset-env": "^7.20.2",
+    "nodemon": "^2.0.20",
+    "rimraf": "^4.1.2"
   },
   "bugs": {
     "url": "https://github.com/kraj2608/bff-project-summit/issues"
