--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.8"
 
 services:
   foodshop-bff:
-    image: foodshop-bff
+    image: foodshop-bff:0.0.1
     ports:
       - "5000:5000"
     environment:
